--- a/newUserPage.css
+++ b/newUserPage.css
@@ -20,28 +20,30 @@ display: inline-block;
 
 div #Name{
     display: flex;
-    align-content: space-around;
+    
     
 }
 div #Email-Password{
-    padding:3%;
+    
     display: flex;
     
 }
 .sidebar{
     min-height: 100vh;
     width: 13%;
+    border-radius: 9px;
 }
 #Userinfo{
     margin:7%;
     background-color: white;
-    border-style:calc(12,9,9);
+    border-radius: 9px;
     
 }
 #notSideBar{
     
     background-color: rgb(201, 214, 223);
     width: 87%;
+    
 }
 header{
     background-color: rgb(31, 29, 43);
@@ -52,4 +54,37 @@ header{
 nav a:hover{
     cursor: pointer;
 }
-
+.submitButton button{
+    
+    color: white;
+    background-color: rgb(31, 121, 246);
+    border-radius: 5px;
+    margin-left: 90%;
+    margin-bottom: 3%;
+    width: 9%;
+    height:9%;
+}
+form{
+    margin-left: 3%;
+    
+}
+.labeler{
+    display: flex;
+    flex-direction: column;
+    
+}
+#Role{
+    width: 21%;
+}
+form div{
+    margin-right: 3%;
+    margin-bottom: 3%;
+    width: 100%;
+    
+}
+form div input[type="text"],form div input[type="password"],form div select {
+height: 27px;
+}
+form div h1{
+    padding-top: 3%;
+}
