--- a/newContact.css
+++ b/newContact.css
@@ -12,14 +12,17 @@ input.error {
 }
 
 
-
 body{
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: lightgrey;
 }
 
+.container{
+  display: flex;
+}
+
 h1{
-  margin-left: 25%;
+  margin-left: 1%;
 }
 
 .box{
@@ -98,3 +101,31 @@ button{
 }
 
 
+nav {
+background-color: white; 
+color: black; 
+padding: 20px; 
+}
+
+nav a {
+color: black; 
+text-decoration: none;
+padding: 3px;
+display: inline-block;
+}
+
+
+.sidebar{
+  min-height: 100vh;
+  width: 13%;
+}
+
+header{
+  background-color: rgb(31, 29, 43);
+  color: white;
+  height: 36px;
+}
+
+nav a:hover{
+  cursor: pointer;
+}
